# sparse_pretrain_public

./: .gitignore  README.md  __init__.py  design_choices.md  pyproject.toml  requirements.txt  scratch.ipynb  setup.sh
configs_bridges/: d1024_thresh.yaml  multi_test.yaml
configs_standalone/: simple_2M_dense.yaml  simple_5M_dense.yaml  simple_5M_sparse.yaml  simple_5M_sparse_adam.yaml  simple_dense.yaml  simple_test.yaml  small.yaml
conversion_utils/: __init__.py  graph_forward.py  graph_pareto.py  wrapper.py
for_claude/: bridges_replication_guide.txt  gao.txt  gpt_reference.py  graph_pruning_replication_guide.txt  replication_guide.txt
notebooks/: bigram_baseline.ipynb  check_task.ipynb  circuit_visualization_demo.py  eval_simplestories.py  load_hooked.ipynb  test_model.ipynb  test_task_sentences.ipynb
scripts/: analyze_carbs_results.py  analyze_seed_repetitions.py  build_new_task_datasets.py  build_tense_dataset.py  compare_frozenln_pareto.py  estimate_exact_importance_runtime.py  evaluate_bridge_paths.py  generate_all_circuit_htmls.py  generate_circuit_htmls.py  generate_noembed_circuit_htmls.py  plot_random_init_comparison.py  regenerate_frozenln_pareto_plots.py  regenerate_importance_plots.py  regenerate_ioi_relaxed_htmls.py  regenerate_ioi_relaxed_pareto_plots.py  regenerate_pareto_plots.py  regenerate_plots.py  rerun_d1024_zero_noembed.py  rerun_d1024_zero_noembed_carbs.py  run_100_seeds_d3072_ioi_relaxed.py  run_100_seeds_generic.py  run_100_seeds_ioi_relaxed.py  run_100_seeds_pronoun_frozenln.py  run_all_bridges_ioi_relaxed.py  run_all_bridges_ioi_relaxed_full.py  run_all_bridges_ioi_relaxed_mean.py  run_all_evals.py  run_carbs_all_models.py  (+37 more)
(+49 files in other folders)
