[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-pretrain"
version = "0.1.0"
description = "Weight-sparse transformers with interpretable circuits"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "huggingface-hub>=0.16.0",
    "jaxtyping>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
interpretability = [
    "transformer-lens>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_sparse_pretrain*"]

