[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-pretrain"
version = "0.1.0"
description = "Weight-sparse transformers with interpretable circuits"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "huggingface-hub>=0.16.0",
    "jaxtyping>=0.2.0",
    "wandb>=0.16.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "einops>=0.6.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
interpretability = [
    "transformer-lens>=1.0.0",
]
carbs = [
    "carbs @ git+https://github.com/imbue-ai/carbs.git",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*", "conversion_utils*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.md"]
